# stremio-native

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  mpv.lock.json  vcpkg.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: dependency-freshness.yml  mpv-windows.yml
app/: Cargo.toml  build.rs
app/src/: app_model.rs  args.rs  callbacks.rs  config.rs  db.rs  deep_link.rs  discord.rs  event_loop.rs  image_cache.rs  logger.rs  main.rs  mpv_integration.rs  navigation.rs  performance.rs  playback.rs  plugins.rs  rendering.rs  shaders.rs  shortcuts.rs  single_instance.rs  theintrodb.rs  thumbnail_preview.rs  tray.rs  ui_action_bridge.rs  updater.rs  window_integration.rs  window_style.rs
app/src/models/: addons.rs  auth.rs  board.rs  calendar.rs  details.rs  discover.rs  library.rs  mod.rs  onboarding.rs  search.rs  settings.rs
app/src/platform/windows/: mod.rs  video_host.rs
app/ui/: app.slint  app_contract.slint  components_preview.slint  rendering_types.slint  sidebar_preview.slint  theme.slint
app/ui/cinematic/: routes.slint  shell.slint  theme.slint  types.slint
app/ui/cinematic/components/: cinematic_button.slint  feedback.slint  focus_surface.slint  hero_billboard.slint  input.slint  loading.slint  media_rail.slint  media_tile.slint  metadata.slint  overlays.slint  select.slint  settings_section.slint  stream_row.slint  top_navigation.slint
app/ui/cinematic/pages/: addons.slint  auth.slint  board.slint  calendar.slint  details.slint  discover.slint  library.slint  page_surface.slint  player.slint  search.slint  settings.slint
app/ui/components/: action_group.slint  app_debug_menu.slint  button.slint  checkbox.slint  chip.slint  color_input.slint  fallback_image.slint  feedback.slint  form_controls.slint  horizontal_nav.slint  horizontal_scroll.slint  loading_placeholders.slint  media_card.slint  media_carousel.slint  media_rows.slint  meta_preview.slint  meta_row.slint  number_input.slint  onboarding.slint  overlays.slint  radio_button.slint  search.slint  select.slint  share_prompt.slint  shortcuts.slint  sidebar.slint  slider.slint  text_input.slint  toggle.slint  transition.slint  types.slint
app/ui/debug/: README.md  check-runtime-states.ps1  runtime-preview.json
app/ui/layers/: auth_layer.slint  details_layer.slint  player_layer.slint
app/ui/pages/: addons.slint  auth.slint  board.slint  calendar.slint  details.slint  discover.slint  library.slint  player.slint  search.slint  settings.slint
app/ui/previews/: auth_preview.slint  board_preview.slint  debug_menu.slint  details-series-episodes.json  details-series-streams.json  details_preview.slint  discover-debug.json  discover-dropdown-open.json  discover-movie-selected.json  discover-series-selected.json  discover_preview.slint  library_preview.slint  player-debug.json  player_preview.slint  preview_shell.slint  size-1280.json  size-2048.json
app/ui/shells/: classic_shell.slint
core-env/: Cargo.toml
core-env/src/: lib.rs
docs/: implementation-progress.md
flatpak/: .gitignore  build.sh  com.stremio.StremioNative.Devel.desktop  com.stremio.StremioNative.Devel.json  com.stremio.StremioNative.Devel.metainfo.xml
licenses/thumbfast/: NOTICE.md
playback-mpv/: Cargo.toml  build.rs
playback-mpv/src/: actor.rs  ffi.rs  lib.rs  pinned.rs  render.rs  software.rs  thumbnail.rs
scripts/: generate_release_notes.py  stage_windows_msvc_runtime.ps1  sync-mpv.ps1
server-connector/: Cargo.toml
server-connector/src/: lib.rs
setup/: StremioNative.iss  create_setup.cmd
triplets/: x64-windows-v3-static-md-release.cmake  x64-windows-v3-static-release.cmake  x64-windows-v4-static-release.cmake
vcpkg-overlays/libtorrent/: portfile.cmake  vcpkg.json
