[workspace]
resolver = "2"
members = [
    "app",
    "core-env",
    "playback-mpv",
    "server-connector",
]

[workspace.dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = "0.8.9"
blake3 = "1"
chrono = "0.4.45"
futures = "0.3.32"
glow = "0.18.0"
http = "1.4.2"
iconflow = "1.0.0"
image = { version = "0.25.10", default-features = false }
moka = "0.12.15"
reqwest = { version = "0.13.4", default-features = false }
serde = "1.0.228"
serde_json = "1.0.150"
slint = "1.17.1"
slint-build = "1.17.1"
thiserror = "2.0.18"
tokio = "1.52.3"
tokio-util = "0.7.18"
tower = "0.5.3"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }
tracing-appender = "0.2.5"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.23"
url = "2.5.8"
discord-rich-presence = "1.1.0"
turso = { version = "0.6.1", default-features = false }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
