[package]
name = "stremio-native"
version = "1.0.3"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
stremio-core.workspace = true
stream-server.workspace = true
settings-gui.workspace = true
core-env = { path = "../core-env" }
playback-mpv = { path = "../playback-mpv" }
server-connector = { path = "../server-connector" }
slint = { workspace = true, features = [
    "accessibility",
    "compat-1-2",
    "renderer-skia-opengl",
    "std",
    "system-tray",
    "unstable-winit-030",
] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures.workspace = true
anyhow.workspace = true
blake3.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing-chrome.workspace = true
iconflow = { workspace = true, features = ["pack-lucide", "pack-bootstrap"] }
url.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["rustls", "charset", "http2"] }
image = { workspace = true, default-features = false, features = ["webp", "png", "jpeg"] }
moka = { workspace = true, features = ["sync", "future"] }
turso = { workspace = true }
chrono = { workspace = true }
mimalloc = "0.1.52"
arboard = "3.6.1"
hex = "0.4.3"
open = "5.4.0"
percent-encoding.workspace = true
self_update.workspace = true
zip.workspace = true
sys-locale.workspace = true
uuid = { version = "1.24.0", features = ["v4"] }
discord-rich-presence = { workspace = true }
rodio.workspace = true
mlua = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }


[build-dependencies]
slint-build.workspace = true
iconflow = { workspace = true, features = ["pack-lucide", "pack-bootstrap"] }
serde_json.workspace = true
winres = "0.1.12"

[features]
default = ["stremio-core/env-future-send", "core-env/default", "server-connector/default"]
in-process = ["core-env/in-process", "server-connector/in-process"]
plugins = ["dep:mlua"]

[package.metadata.deb]
maintainer = "stremio-native maintainers <stremio-native@example.com>"
copyright = "2026 stremio-native maintainers"
extended-description = "High-performance native Stremio client built with Rust and Slint"
section = "video"
priority = "optional"
assets = [
    ["target/release/stremio-native", "usr/bin/stremio-native", "755"],
]
